--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><em> - jQery</em></span>
+              <span class="skill"><em> - jQuery</em></span>
             </div>
 
             <div class="progress">
@@ -209,9 +209,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Luna Lee</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
+              <p><em></em></p>
               <ul>
                 <li>New Taipei, Taiwan</li>
                 <li>lunalee0317@gmail.com</li>
@@ -293,7 +291,6 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-web">Web</li>
-              <li data-filter=".filter-card">Graphic</li>
             </ul>
           </div>
         </div>
@@ -304,7 +301,7 @@
               <img src="assets/img/portfolio/survey.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>News & Voting</h4>
-                <p>HTML、CSS、jQery、PHP、MySQL</p>
+                <p>HTML、CSS、jQuery、PHP、MySQL</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/survey.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="News & Voting"><i class="bx bx-plus"></i></a>
@@ -319,27 +316,12 @@
               <img src="assets/img/portfolio/maine.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Maine</h4>
-                <p>HTML、CSS、Bootstrap、jQery、Photoshop、Illustrator</p>
+                <p>HTML、CSS、Bootstrap、jQuery、Photoshop、Illustrator</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/maine.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Maine"><i class="bx bx-plus"></i></a>
                   <a href="http://220.128.133.15/s1110419/maine/index.html" target="_blank"><i
                       class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/2023calendar.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>2023 Calendar</h4>
-                <p>Photoshop</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/2023calendar.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="2023 Calendar"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
