--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/maine.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Maine"><i class="bx bx-plus"></i></a>
-                  <a href="http://220.128.133.15/s1110419/maine/index.html" target="_blank"><i
+                  <a href="https://luna1027.github.io/Maine/" target="_blank"><i
                       class="bx bx-link"></i></a>
                 </div>
               </div>
